--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "3000:3000"
     volumes:
       - ./backend:/app
+      - ./shared:/shared
     working_dir: /app
     command: npm run dev
     restart: unless-stopped
@@ -17,7 +18,7 @@ services:
       - "3001:3000"
     volumes:
       - ./frontend:/app
-      # - /app/node_modules
+      - ./shared:/app/shared
     working_dir: /app
     command: npm start
     restart: unless-stopped
